--- a/proyecto/Portafolio/template/Portafolio/hijos.html
+++ b/proyecto/Portafolio/template/Portafolio/hijos.html
@@ -1,4 +1,4 @@
-{% extends "Portafolio/padre.html" %}
+{% extends "/padre.html" %}
 {% load static %}
 
 {%block header%}
@@ -12,12 +12,12 @@
       </div>
     </div>
     <!-- background shapes -->
-    <img src="{% static 'Portafolio/images/illustrations/leaf-bg-top.png' %}" alt="illustrations" class="bg-shape-1 w-100">
-    <img src="{% static 'Portafolio/images/illustrations/dots-group-sm.png' %}" alt="illustrations" class="bg-shape-2">
-    <img src="{% static 'Portafolio/images/illustrations/leaf-yellow.png' %}" alt="illustrations" class="bg-shape-3">
-    <img src="{% static 'Portafolio/images/illustrations/leaf-orange.png' %}" alt="illustrations" class="bg-shape-4">
-    <img src="{% static 'Portafolio/images/illustrations/dots-group-cyan.png' %}" alt="illustrations" class="bg-shape-5">
-    <img src="{% static 'Portafolio/images/illustrations/leaf-cyan-lg.png' %}" alt="illustrations" class="bg-shape-6">
+    <img src="{% static 'static/images/illustrations/leaf-bg-top.png' %}" alt="illustrations" class="bg-shape-1 w-100">
+    <img src="{% static 'static/images/illustrations/dots-group-sm.png' %}" alt="illustrations" class="bg-shape-2">
+    <img src="{% static 'static/images/illustrations/leaf-yellow.png' %}" alt="illustrations" class="bg-shape-3">
+    <img src="{% static 'static/images/illustrations/leaf-orange.png' %}" alt="illustrations" class="bg-shape-4">
+    <img src="{% static 'static/images/illustrations/dots-group-cyan.png' %}" alt="illustrations" class="bg-shape-5">
+    <img src="{% static 'static/images/illustrations/leaf-cyan-lg.png' %}" alt="illustrations" class="bg-shape-6">
   </section>
   <!-- /page title -->
 
