--- a/proyecto/Portafolio/template/Portafolio/padre.html
+++ b/proyecto/Portafolio/template/Portafolio/padre.html
@@ -20,14 +20,14 @@
   
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="{% static 'Portafolio/plugins/bootstrap/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'static/plugins/bootstrap/bootstrap.min.css' %}">
   <!-- slick slider -->
-  <link rel="stylesheet" href="{% static 'Portafolio/plugins/slick/slick.css' %}">
+  <link rel="stylesheet" href="{% static 'static/plugins/slick/slick.css' %}">
   <!-- themefy-icon -->
-  <link rel="stylesheet" href="{% static 'Portafolio/plugins/themify-icons/themify-icons.css' %}">
+  <link rel="stylesheet" href="{% static 'static/plugins/themify-icons/themify-icons.css' %}">
 
   <!-- Main Stylesheet -->
-  <link href="{% static 'Portafolio/css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'static/css/style.css' %}" rel="stylesheet">
 
 </head>
 <body>
@@ -97,16 +97,16 @@
 <!-- /footer -->
 
 <!-- jQuery -->
-<script src="{% static 'Portafolio/plugins/jQuery/jquery.min.js' %}"></script>
+<script src="{% static 'static/plugins/jQuery/jquery.min.js' %}"></script>
 <!-- Bootstrap JS -->
-<script src="{% static 'Portafolio/plugins/bootstrap/bootstrap.min.js' %}"></script>
+<script src="{% static 'static/plugins/bootstrap/bootstrap.min.js' %}"></script>
 <!-- slick slider -->
-<script src="{% static 'Portafolio/plugins/slick/slick.min.js' %}"></script>
+<script src="{% static 'static/plugins/slick/slick.min.js' %}"></script>
 <!-- filter -->
-<script src="{% static 'Portafolio/plugins/shuffle/shuffle.min.js' %}"></script>
+<script src="{% static 'static/plugins/shuffle/shuffle.min.js' %}"></script>
 
 <!-- Main Script -->
-<script src="{% static 'Portafolio/js/script.js' %}"></script>
+<script src="{% static 'static/js/script.js' %}"></script>
 
 </body>
 </html>
