--- a/proyecto/templates/padre.html
+++ b/proyecto/templates/padre.html
@@ -49,13 +49,13 @@
             <a class="nav-link" href="about.html">Sobre mi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'Testimonios' %}">Testimonios</a>
+            <a class="nav-link" href="index.html" >Testimonio</a> 
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'Contacto' %}">Contacto</a>
+            <a class="nav-link" href="{%url 'Contacto' %}">Contacto</a> 
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{%url 'IniciarSesion' %}">Iniciar Sesion</a>
+            <a class="nav-link" href="{%url 'Login' %}">Iniciar Sesion</a> <!---->
           </li>
         </ul>
       </div>
